--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,7 @@
 }
 
 html {
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(3, 0, 18);
   font-family: "Orbitron", sans-serif;
   overscroll-behavior: none;
   -webkit-overflow-scrolling: auto;
@@ -34,4 +34,19 @@ html {
 .home {
   font-size: 2rem;
   color: white;
+}
+
+#loading {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgb(3, 0, 18);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 2rem;
+  z-index: 10;
 }
